working with cloudant and pouch db

--- a/index.html
+++ b/index.html
@@ -10,4 +10,6 @@
     <div class="container"></div>
   </body>
   <script src="/bundle.js"></script>
-</html>
+  <script src="./src/base.js"></script>
+  <script src="node_modules/pouchdb/dist/pouchdb.min.js"></script>
+  </html>
